--- a/index.html
+++ b/index.html
@@ -9,9 +9,31 @@
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
   </head>
   <body>
+    <header>
+        <div>
+            <p>Hello World</p>
+            <button>Learn More</button>
+        </div>
+    </header>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Data</li>
+            <li>Resources</li>
+            <li>About Us</li>
+        </ul>
+    </nav>
     <main>
-        <h1>Hello World</h1>  
+        <div>
+            <h1>The Gender Gap in Tech</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <img src="blank">
+        </div>
     </main>
+    <button>↑</button>
+    <footer>
+        <p>Copyright?</p>
+    </footer>
 	<script src="index.js"></script>
   </body>
 </html>
